--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -49,6 +49,10 @@
         "filter": [
           "**/*"
         ]
+      },
+      {
+        "from": "../.env",
+        "to": "."
       }
     ],
     "publish": null
